# Podcast-AI

./: .gitignore  generate_podcast.py  main.py  pyproject.toml
backend/: main.py  pyproject.toml
backend/podcast_agent/: audio.py  generator.py  visualizer.py
frontend/: README.md  index.html  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: Layout.tsx  WaveformVisualizer.tsx
frontend/src/components/ui/: button.tsx
frontend/src/pages/: Index.tsx  NotFound.tsx
podcast_agent/: audio.py  generator.py  visualizer.py
